<resources>
    <string name="app_name">Exclusive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="accessories">Accessories</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="shoes">Shoes</string>
    <string name="all">All</string>
    <string name="brands">Brands</string>
    <string name="logout">Logout</string>

    <string name="google_login">login with google</string>
    <string name="loginTitle">Login</string>
    <string name="inputName">Name</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="orLoginWithSocialAccount">Or login with social account</string>
    <string name="googleLogin">login with google</string>
    <string name="signUp">Sign Up</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="forgetPasswordTitle">Forget Password</string>
    <string name="send">send</string>
    <string name="pleaseEnterEmail">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="products">Products</string>
    <string name="coupon">Coupon Details</string>
    <string name="cart">My Bag</string>
    <string name="settings">Settings</string>
    <string name="currency">Currencies</string>


    <string name="add_address">Add Address</string>
    <string name="payment_success">Payment Completed</string>
    <string name="orderNumber">Order Number: </string>
    <string name="price">Price:</string>
    <string name="address">Addresses</string>
    <string name="total">Total</string>
    <string name="for_more">For More</string>
    <string name="check_out">Check Out</string>
    <string name="title">Name\n</string>
    <string name="save">Save</string>
    <string name="enter_your_phone">Enter Your Phone</string>
    <string name="city">City</string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="country">Country</string>
    <string name="default_address">Default Address</string>
    <string name="use_as_the_shipping_address">Use as the Shipping Address</string>
    <string name="phone">Phone:</string>
    <string name="change">Change</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="visa_mastercard">Visa / MasterCard</string>
    <string name="submit_order">Submit Order</string>
    <string name="google_maps_key" translatable="false">AIzaSyCzL-KKINpE6at4j4zH8qNXAB6eMn8Y0L0</string>

    <string name="orderDetails">Order Details</string>
    <string name="order_number">Order Number:</string>
    <string name="date">Date:</string>
    <string name="tracking_number">Tracking Number:</string>
    <string name="quantity">Quantity:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="status">Status:</string>
    <string name="status_delivered">Delivered</string>
    <string name="canceled">Canceled</string>
    <string name="processing">Processing</string>
    <string name="delivered">Delivered</string>
    <string name="orders">Orders</string>
    <string name="product_image">Product Image</string>
    <string name="product_title">Pullover</string>
    <string name="product_brand">Mango</string>
    <string name="product_color">Color: Gray</string>
    <string name="product_size">Size: L</string>
    <string name="product_units">Units: 1</string>
    <string name="product_price">$51</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="product_info">Product info</string>
    <string name="wish_list">Wish List</string>
    <string name="coupons">Coupons</string>
    <string name="enter_your_city">Enter Your City</string>
    <string name="enter_your_country">Enter Your Country</string>
    <string name="enter_your_zip_code">Enter Your Zip Code</string>
    <string name="special_offer">Special Offer</string>
    <string name="search_here">Search here</string>
    <string name="discount_type">Discount Type:</string>
    <string name="percentage">Percentage</string>
    <string name="discount_value">Discount Value:</string>
    <string name="customer_selection">Customer Selection:</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="apply">Apply</string>
    <string name="search_currency">search currency</string>

</resources>