<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/order_number"
                style="@style/TextViewStyleLight" />

            <TextView
                android:id="@+id/tv_orderNumberValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                style="@style/TextViewStyleTwo"
                android:text="1947034"
         />
            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                style="@style/TextViewStyleLight"
                />

            <TextView
                android:id="@+id/tv_dateValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="05-12-2019"
                style="@style/TextViewStyleTwo"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/trackingNumberTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tracking_number"
                style="@style/TextViewStyleLight" />

            <TextView
                android:id="@+id/tv_trackingNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="IW3475453455"
                style="@style/TextViewStyleTwo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                style="@style/TextViewStyleLight" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="3"
                style="@style/TextViewStyleTwo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/totalAmountTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_amount"
                style="@style/TextViewStyleLight" />

            <TextView
                android:id="@+id/tv_totalAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="112$"
                style="@style/TextViewStyleTwo" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primary_color"
                android:text="@string/status_delivered"
                style="@style/TextViewStyle" />

        </LinearLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>